--- a/zhima-boot-engine-qlexpress/pom.xml
+++ b/zhima-boot-engine-qlexpress/pom.xml
@@ -3,6 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.lovezhima.boot</groupId>
         <artifactId>zhima-boot-parent</artifactId>
@@ -10,7 +11,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>zhima-boot-web-response</artifactId>
+    <artifactId>zhima-boot-engine-qlexpress</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -20,16 +21,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.lovezhima.boot</groupId>
-            <artifactId>zhima-boot-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
+            <groupId>com.alibaba</groupId>
+            <artifactId>QLExpress</artifactId>
+            <version>3.3.1</version>
         </dependency>
     </dependencies>
 </project>
